--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ p {
     font-size: 34px;
     position: relative;
     left: 100px;
-    width: 600px;
+    width: 80%;
 }
 
 .parent {
@@ -22,7 +22,7 @@ p {
     font-size: 18px;
     position: relative;
     left: 100px;
-    width: 175px;
+    width: 30%;
     display: inline-block;
     top: -25px;
 }
@@ -31,7 +31,7 @@ p {
     font-size: 18px;
     position: relative;
     left: 125px;
-    width: 150px;
+    width: 30%;
     display: inline-block;
     top: -25px;
 }
